OP-702: z-index fix for dragging, only reorder if view is not filtered

--- a/web-app/themes/common/stylesheets/_main.scss
+++ b/web-app/themes/common/stylesheets/_main.scss
@@ -627,3 +627,7 @@ img.widget-drag-proxy {
         background: $owf-focus-color;
     }
 }
+
+.ui-sortable-helper {
+    z-index: 10000002 !important;
+}
